# python-labs-monorepo

./: .gitignore  .gitmodules  README.md  docker-compose.yml  push_repos.sh  pyproject.toml  queries.sql  urls.txt
async-web-scraper/: benchmark.py  requirements.txt
async-web-scraper/scraper/: __init__.py  fetcher.py  sequential.py
config/: urls.py
config/settings/: base.py
data/: sample_users.csv
data-processing-pipeline/: .gitignore  .pre-commit-config.yaml  README.md
data-processing-pipeline/pipeline/: exceptions.py  logging_config.py  models.py  pipeline.py
data_importer/models/: user.py
data_importer/repositories/: json_repository.py
data_importer/validators/: user_validator.py
docs/: GRADING.md
employee-payroll-tracker/: README.md  pyproject.toml
employee-payroll-tracker/employee_payroll/models/: employee.py
employee-payroll-tracker/employee_payroll/services/: payroll_service.py
employee-payroll-tracker/employee_payroll/ui/: cli.py
employee_payroll/models/: full_time_employee.py  part_time_employee.py
git-config-manager/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
git-config-manager/gitconfig/: __init__.py  cli.py  exceptions.py  models.py
git-config-manager/gitconfig/core/: __init__.py  config_manager.py  git_repository.py  parsers.py
git-config-manager/gitconfig/interfaces/: __init__.py  parser.py  repository.py
git-config-manager/tests/: __init__.py  conftest.py
git-config-manager/tests/integration/: __init__.py
git-config-manager/tests/unit/: __init__.py  test_cli.py  test_config_manager.py  test_fixtures.py  test_git_repository.py  test_parsers.py
library-inventory-app/: README.md
library_system/models/: audiobook.py  resource.py
logistics-shipment-tracking/: README.md  docker-compose.yml  main.py  populate_data.py  requirements.txt
logistics-shipment-tracking/init-db/: seed.sql
module-1-python-fundamentals/library-inventory-app/: pyproject.toml
module-1-python-fundamentals/library-inventory-app/.git_hidden/: FETCH_HEAD  ORIG_HEAD  config  index
module-1-python-fundamentals/library-inventory-app/.git_hidden/logs/refs/heads/: main
module-1-python-fundamentals/library-inventory-app/.git_hidden/logs/refs/remotes/origin/: main
module-1-python-fundamentals/library-inventory-app/.git_hidden/refs/remotes/origin/: main
module-1-python-fundamentals/library-inventory-app/docs/: ARCHITECTURE.md
module-1-python-fundamentals/library-inventory-app/library_system/: main.py
module-1-python-fundamentals/library-inventory-app/library_system/models/: book.py  ebook.py
module-1-python-fundamentals/library-inventory-app/library_system/ui/: cli.py
module-1-python-fundamentals/library-inventory-app/library_system/utils/: storage.py
module-1-python-fundamentals/library-inventory-app/tests/: test_cli.py  test_models.py  test_services.py
module-2-clean-code-testing/git-config-manager/: .coverage
module-2-clean-code-testing/resilient-data-importer/: .gitignore  README.md  (+1 more)
module-3-python-advanced/async-web-scraper/: .gitignore  README.md  pyproject.toml  requirements.txt
module-3-python-advanced/async-web-scraper/.git_hidden/: FETCH_HEAD  ORIG_HEAD  config  index
module-3-python-advanced/async-web-scraper/.git_hidden/logs/refs/heads/: main
module-3-python-advanced/async-web-scraper/.git_hidden/logs/refs/remotes/origin/: main
module-3-python-advanced/async-web-scraper/.git_hidden/refs/heads/: main
module-3-python-advanced/async-web-scraper/scraper/: decorators.py  extractor.py  threaded.py
module-4-database-fundamentals/data-processing-pipeline/: .coverage  pyproject.toml
module-4-database-fundamentals/data-processing-pipeline/.git_hidden/: config  index
module-4-database-fundamentals/data-processing-pipeline/.git_hidden/logs/: HEAD
module-4-database-fundamentals/data-processing-pipeline/.git_hidden/logs/refs/remotes/origin/: main
module-4-database-fundamentals/data-processing-pipeline/.git_hidden/refs/remotes/origin/: main
module-4-database-fundamentals/data-processing-pipeline/data_processing_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
module-4-database-fundamentals/data-processing-pipeline/tests/unit/: test_sentiment_analyzer.py  test_text_cleaner.py
resilient-data-importer/: .pre-commit-config.yaml  README.md  pyproject.toml
resilient-data-importer/data_importer/: cli.py  exceptions.py
resilient-data-importer/data_importer/models/: __init__.py  user.py
resilient-data-importer/data_importer/parsers/: csv_parser.py
resilient-data-importer/data_importer/repositories/: json_repository.py
resilient-data-importer/data_importer/services/: __init__.py  import_service.py
resilient-data-importer/data_importer/validators/: __init__.py  user_validator.py
resilient-data-importer/docs/: exceptions.md
resilient-data-importer/tests/: conftest.py  test_cli.py  test_csv_parser.py  test_import_service.py  test_json_repository.py  test_user_validator.py
scraper/: async_generator.py
secure-auth-service/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
secure-auth-service/auth_service/: __init__.py  exceptions.py  models.py  service.py
secure-auth-service/auth_service/implementations/: __init__.py  bcrypt_hasher.py  memory_repository.py
secure-auth-service/auth_service/interfaces/: __init__.py  hasher.py  repository.py
secure-auth-service/tests/: test_implementations.py  test_login.py  test_registration.py
shortener/: serializers.py  views.py
student-course-management-lab/: README.md
tdd-weather-api/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tdd-weather-api/tests/: test_exceptions.py  test_logging.py  test_provider.py  test_weather_service.py
tdd-weather-api/weather_service/: __init__.py  exceptions.py  models.py  service.py
tdd-weather-api/weather_service/providers/: __init__.py  base.py  mock_provider.py
tests/: test_corner_cases.py  test_csv_parser.py  test_json_repository.py
url-shortener/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
vehicle-rental-system/: README.md
(+106 files in other folders)
