[tool.poetry]
name = "library-inventory-app"
version = "0.1.0"
description = "A Python-based Library Inventory Application demonstrating OOP principles."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "library_system"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
library-app = "library_system.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
