[project]
name = "async-web-scraper"
version = "1.0.0"
description = "Async web scraper using asyncio fundamentals"
authors = [{name = "Lab Student"}]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.1",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
